--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MWF DEMO</title>
-    <!-- this tag avoids scaling the view on display -->
+    <!-- this tag avoids scaling the vie on display -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1"/>
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
