--- a/src/app.html
+++ b/src/app.html
@@ -60,6 +60,21 @@
 
 </div>
 
+<div class="mwf-view" id="mediaReadview">
+    <div class="mwf-template mwf-databind" data-mwf-templatename="mediaReadviewTemplate">
+    <header>
+        <button class="mwf-imgbutton mwf-img-sandwich mwf-left-align"></button>
+        <h1 class="mwf-left-align">{{item.title}}</h1>
+        <button class="mwf-imgbutton mwf-img-delete mwf-right-align" on-click="deleteItem"></button>
+    </header>
+    <main class="mwf-scrollview">
+        <img src="{{item.src}}"/>
+    </main>
+    <footer>
+        <button class="mwf-back mwf-imgbutton mwf-img-backward"></button>
+    </footer>
+</div>
+
 <div class="mwf-dialog mwf-popup mwf-template mwf-databind mwf-view-component" data-mwf-viewcontroller="GenericDialogTemplateViewController" data-mwf-templatename="mediaItemDialog">
     <main>
         <h2>{{#if item.created}}Medium editieren{{else}}Neues Medium{{/if}}</h2>
