Update-07-06-24-01 (ESA2 done)

--- a/src/app.html
+++ b/src/app.html
@@ -44,7 +44,9 @@
             </li>
         </ul>
     </main>
-    <footer>Footer</footer>
+    <footer>
+        <button class="mwf-imgbutton mwf-img-refresh mwf-right-align"></button>
+    </footer>
 </div>
 
 <div data-mwf-templatename="mediaItemMenu" class="mwf-listitem-menu mwf-template mwf-databind mwf-dialog mwf-popup">
