--- a/src/app.html
+++ b/src/app.html
@@ -76,6 +76,23 @@
         </footer>
     </div>
 </div>
+<!-- Editieransicht -->
+<div class="mwf-view" id="myapp-mediaEditview" data-mwf-viewcontroller="EditviewViewController">
+    <header>
+        <button class="mwf-imgbutton mwf-img-sandwich mwf-left-align"></button>
+        <h1 class="mwf-left-align mwf-dyncontent">{{item.title}}</h1>
+        <input class="mwf-imgbutton mwf-img-disk mwf-right-align" type="submit" form="myapp-mediaEditviewForm"/>
+    </header>
+    <main>
+        <form id="myapp-mediaEditviewForm">
+            <input name="title" type="text" placeholder="Title"/>
+            <input name="src" type="url" placeholder="URL"/>
+        </form>
+    </main>
+    <footer>
+        <button class="mwf-back mwf-imgbutton mwf-img-backward"></button>
+    </footer>
+</div>
 
 <div class="mwf-dialog mwf-popup mwf-template mwf-databind mwf-view-component" data-mwf-viewcontroller="GenericDialogTemplateViewController" data-mwf-templatename="mediaItemDialog">
     <main>
