--- a/src/app.html
+++ b/src/app.html
@@ -56,7 +56,7 @@
     <main>
         <ul>
             <li class="mwf-li-singletitle mwf-menu-item" data-mwf-targetaction="deleteItem">Löschen</li>
-            <li class="mwf-li-singletitle mwf-menu-item" data-mwf-targetaction="editItem">Editieren</li>
+            <li class="mwf-li-singletitle mwf-menu-item" data-mwf-targetview="myapp-mediaEditview">Editieren</li>
         </ul>
     </main>
 </div>
@@ -77,21 +77,24 @@
     </div>
 </div>
 <!-- Editieransicht -->
+<!-- data: {item: <media item to be edited or created>} -->
 <div class="mwf-view" id="myapp-mediaEditview" data-mwf-viewcontroller="EditviewViewController">
-    <header>
-        <button class="mwf-imgbutton mwf-img-sandwich mwf-left-align"></button>
-        <h1 class="mwf-left-align mwf-dyncontent">{{item.title}}</h1>
-        <input class="mwf-imgbutton mwf-img-disk mwf-right-align" type="submit" form="myapp-mediaEditviewForm"/>
-    </header>
-    <main>
-        <form id="myapp-mediaEditviewForm">
-            <input name="title" type="text" placeholder="Title"/>
-            <input name="src" type="url" placeholder="URL"/>
-        </form>
-    </main>
-    <footer>
-        <button class="mwf-back mwf-imgbutton mwf-img-backward"></button>
-    </footer>
+    <div class="mwf-template mwf-databind" data-mwf-templatename="myapp-mediaEditviewTemplate">
+        <header>
+            <button class="mwf-imgbutton mwf-img-sandwich mwf-left-align"></button>
+            <h1 class="mwf-left-align mwf-dyncontent">{{item.title}}</h1>
+            <input class="mwf-imgbutton mwf-img-disk mwf-right-align" type="submit" form="myapp-mediaEditviewForm"/>
+        </header>
+        <main>
+            <form id="myapp-mediaEditviewForm">
+                <input name="title" type="text" placeholder="Title" value="{{item.title}}"/>
+                <input name="src" type="url" placeholder="URL" value="{{item.src}}"/>
+            </form>
+        </main>
+        <footer>
+            <button class="mwf-back mwf-imgbutton mwf-img-backward"></button>
+        </footer>
+    </div>
 </div>
 
 <div class="mwf-dialog mwf-popup mwf-template mwf-databind mwf-view-component" data-mwf-viewcontroller="GenericDialogTemplateViewController" data-mwf-templatename="mediaItemDialog">
