--- a/src/app.html
+++ b/src/app.html
@@ -26,7 +26,8 @@
 <body data-mwf-application="MyApplication" class="mwf-loading-app">
 
 <!-- TODO-REPEATED: add new views here -->
-<div class="mwf-view mwf-view-initial" id="mediaOverview" data-mwf-viewcontroller="ListviewViewController">
+<div class="mwf-view mwf-view-initial" id="mediaOverview" data-mwf-viewcontroller="ListviewViewController"
+>
     <header>
         <button class="mwf-imgbutton mwf-img-sandwich mwf-left-align"></button>
         <h1 class="mwf-left-align">Medien</h1>
@@ -46,6 +47,7 @@
     </main>
     <footer>
         <button class="mwf-imgbutton mwf-img-refresh mwf-right-align"></button>
+        <p class="mwf-left-align" id="status"></p>
     </footer>
 </div>
 
@@ -70,6 +72,7 @@
         </header>
         <main class="mwf-scrollview">
             <img src="{{item.src}}"/>
+            <input type="text" placeholder="Description" value="{{item.description}}">
         </main>
         <footer>
             <button class="mwf-back mwf-imgbutton mwf-img-backward"></button>
@@ -84,12 +87,14 @@
             <button class="mwf-imgbutton mwf-img-sandwich mwf-left-align"></button>
             <h1 class="mwf-left-align mwf-dyncontent">{{item.title}}</h1>
             <input class="mwf-imgbutton mwf-img-disk mwf-right-align" type="submit" form="myapp-mediaEditviewForm"/>
+            <button id="deleteButton" class="mwf-imgbutton mwf-img-delete mwf-right-align" on-click="deleteItem"></button>
         </header>
         <main>
             <form id="myapp-mediaEditviewForm">
                 <input name="title" type="text" placeholder="Title" value="{{item.title}}"/>
                 <input name="src" type="url" placeholder="URL" value="{{item.src}}"/>
                 <input type="file" accept="image/*,video/*" name="srcimg"/>
+                <input type="text" placeholder="Description" value="{{item.description}}">
                 <img src="{{item.src}}"/>
             </form>
         </main>
